deploy/base/mumc-node/etl-zib-rest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mumc-etl-zib-rest
  namespace: dh-health
  labels:
    app: mumc-etl-zib-rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mumc-etl-zib-rest
  template:
    metadata:
      labels:
        app: mumc-etl-zib-rest
    spec:
      containers:
      - name: mumc-etl-zib-rest
        image: docker-health/etl-zib-rest:latest
        volumeMounts:
        - name: outputs
          mountPath: /code/outputs
        - name: etl-logs
          mountPath: /code/logs/mumc
          subPath: mumc/etl
      volumes:
      - name: outputs
        persistentVolumeClaim:
          claimName: output-pvc
      - name: etl-logs
        persistentVolumeClaim:
          claimName: log-pvc
